[Update] Added google map

--- a/biztechnovation.html
+++ b/biztechnovation.html
@@ -355,6 +355,11 @@ initMarquee();  // Initialize marquee script
     	</div>
     </div>
 </div>
+<br><br/>
+<div style="width: 650">
+  <iframe width="1100" height="500" src="https://maps.google.com/maps?width=100%&height=600&hl=en&q=%2347%2F5%2C%20MR%20Complex%2C%20Kudlu%20main%20Road%20Bangalore-560068+(Nescode%20Technologies%20Pvt%20Ltd)&ie=UTF8&t=&z=17&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+</div><br />
+
 </div> <!--End Container-->
 
 
