--- a/quintessentialtek.html
+++ b/quintessentialtek.html
@@ -413,6 +413,12 @@ initMarquee();  // Initialize marquee script
  </div>
 </div>
 <!--End Technology partner section-->
+<br><br/>
+<!--Google map-->
+<div style="width: 100%">
+  <iframe width="1100" height="450" src="https://maps.google.com/maps?width=100%&height=450&hl=en&q=Near%20Fire%20Alarm%20Station%20Sarjapur%20Road%2C%20Bangalore-560035%20%20Karnataka%2C%20India+(Quintessential%20Tek%20Pvt%20Ltd)&ie=UTF8&t=&z=17&iwloc=B&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+</div><br />
+<!--End Google map -->
 
 <!--Start Footer -->
 
@@ -464,8 +470,9 @@ initMarquee();  // Initialize marquee script
     </div>
 
     <div class="lower-footer">
-      <h5>Pawred By Nescode</h5></div>
-              </div>
+      <h5>Pawred By Nescode</h5>
+    </div>
+</div>
 <!--End Footer -->
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
